--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_auth: ^3.6.3
   cloud_firestore: ^3.4.4
   google_fonts: ^3.0.1
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.3.8
+  marquee: ^2.2.3
+  font_awesome_flutter: ^10.2.1
 
 dev_dependencies:
   flutter_test:
